--- a/src/components/contactForm/contactForm.css
+++ b/src/components/contactForm/contactForm.css
@@ -153,12 +153,14 @@
   );;
 	height:40px;
 	line-height:40px;
-	width:100%;
+	width:25%;
 	border:none;
+	margin-left: 250px;
+	justify-content: center;
 	outline:none;
 	cursor:pointer;
 	color:#fff;
-	font-size:1.5em;
+	font-size:1.3em;
   padding-top: 0px;
 	-webkit-transition: all 0.30s ease-in-out;
 	-moz-transition: all 0.30s ease-in-out;
@@ -198,5 +200,27 @@
 }
 .form_wrapper label {
 	margin:10px 0;
+}
+.form_wrapper input[type="submit"] {
+	background: -webkit-linear-gradient(
+    45deg,
+    rgb(133, 29, 186) 15%,
+    rgba(255, 0, 224, 1) 100%
+  );;
+	height:40px;
+	line-height:40px;
+	width:40%;
+	border:none;
+	margin-left: 90px;
+	justify-content: center;
+	outline:none;
+	cursor:pointer;
+	color:#fff;
+	font-size:1em;
+  padding-top: 0px;
+	-webkit-transition: all 0.30s ease-in-out;
+	-moz-transition: all 0.30s ease-in-out;
+	-ms-transition: all 0.30s ease-in-out;
+	transition: all 0.30s ease-in-out;
 }
 }
