--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,5 +1,13 @@
-.footer__container {
+.footerContainer_dark {
   background-color: #131313;
+  padding: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.footerContainer_light {
+  background-color: #ffffff;
   padding: 1rem 0;
   display: flex;
   flex-direction: column;
@@ -81,7 +89,13 @@
 }
 
 .website__rights {
+  /* color: #fff; */
+}
+.website__rights_dark {
   color: #fff;
+}
+.website__rights_light {
+  color: rgb(0, 0, 0);
 }
 
 @media screen and (max-width: 820px) {
