--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,10 @@ body {
   color: rgb(0, 0, 0);
 }
 
+.speak {
+  margin-right: 5px;
+}
+
 /*====================== new navbar ==========================*/
 
 :root {
