--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -6,7 +6,14 @@
   justify-content: center;
   align-items: center;
 }
-
+.footerContainer_light {
+  background-color: #ffffff;
+  padding: 1rem 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
 #footer__logo {
   color: #9e37d1;
   /* display: flex;
@@ -83,7 +90,9 @@
 .website__rights {
   color: #fff;
 }
-
+.website__rights_light {
+  color: rgb(0, 0, 0);
+}
 @media screen and (max-width: 820px) {
   .footer__links {
     padding-top: 2rem;
