dark_theme_for_landing_page

--- a/src/components/Landingpage/LandingPage.css
+++ b/src/components/Landingpage/LandingPage.css
@@ -6,7 +6,10 @@
     justify-content: left;
     /* border: 2px solid blue; */
     padding: 10vh;
-    background: white;
+    background: rgb(0, 0, 0);
+}
+.container_light{
+    background-color: rgb(255, 255, 255);
 }
 .text_side {
     display: flex;
@@ -55,14 +58,14 @@
 
 
 .enter_chat {
-  background: #ffffff;
+  background: #0A7CFF;
   border-radius: 15px;
   border: none;
-  color:#0A7CFF;
+  color:#ffffff;
   font-size: 1.2em;
   cursor: pointer;
   padding: 0.5em 0.8em;
-  border: 2px solid #0A7CFF;
+ 
   margin-top: 4em;
 }
 
