added dark themed input box

--- a/src/App.css
+++ b/src/App.css
@@ -98,7 +98,6 @@ a {
 }
 
 .nav-links {
-  /* color: #fff; */
   background: -webkit-linear-gradient(
     45deg,
     rgb(133, 29, 186) 15%,
@@ -120,7 +119,6 @@ a {
 .nav-item {
   line-height: 40px;
   margin-right: 1rem;
-  /* outline: 2px solid var(--secondarycolor); */
 }
 
 .toggle-nav {
@@ -172,10 +170,10 @@ a {
     transition: all 0.5s ease;
     z-index: 1;
   }
-  #nav-menu_dark{
+  #nav-menu_dark {
     background: rgb(0, 0, 0);
   }
-  #nav-menu_light{
+  #nav-menu_light {
     background: rgb(255, 255, 255);
   }
 
@@ -223,7 +221,6 @@ a {
   .nav-icon_light {
     color: rgb(0, 0, 0);
   }
- 
 
   .toggle-button {
     margin-right: 70px !important;
@@ -236,13 +233,13 @@ input {
   line-height: 25px;
   width: 98%;
   border-radius: 30px;
-  outline-width: 0;
-  padding: 10px;
-  border: 1px solid white;
 }
 
 .dark_input {
-  background-color: rgb(140, 140, 140);
+  background-color: transparent;
+  border: none;
+  margin-right: 3px;
+  margin-left: 3px;
 }
 .loading {
   position: fixed;
@@ -351,7 +348,37 @@ footer {
   border-radius: 8px;
 }
 
+.sendNewMessagedark {
+  background-image: linear-gradient(to right, rgb(24, 17, 17), rgb(85 6 101));
+  border: 3px solid #d0d0d0;
+  width: 60%;
+  max-width: 1400px;
+  margin: 0 auto;
+  display: flex;
+  height: 100%;
+  justify-content: space-between;
+  padding: 10px;
+  border-radius: 8px;
+  color: white;
+}
+
 .sendNewMessage button {
+  width: 36px;
+  height: 36px;
+  background-color: #ecefff;
+  border: none;
+  box-shadow: none;
+  outline: none;
+  cursor: pointer;
+  font-size: 16px;
+  color: rgb(0, 50, 77);
+  padding: 0;
+  border-radius: 5px;
+  line-height: 36px;
+  transition: all 0.3s cubic-bezier(0.88, 0.19, 0.37, 1.11);
+}
+
+.sendNewMessagedark button {
   width: 36px;
   height: 36px;
   background-color: #ecefff;
@@ -373,10 +400,10 @@ footer {
   }
 }
 
-.sendNewMessage > .darkButton {
+.sendNewMessagedark > .darkButton {
   color: black !important;
 }
-.sendNewMessage > .darkButtonSend {
+.sendNewMessagedark > .darkButtonSend {
   background-color: white !important;
   background-color: white !important;
   color: black !important;
