--- a/src/App.css
+++ b/src/App.css
@@ -243,7 +243,6 @@
   border: 1px solid white;
  }
   
-}
 
 .dark_input {
   background-color: transparent;
@@ -548,5 +547,16 @@
  }
  .scrollicon {
   color: rgb(255, 255, 255);
+ }
+
+ .loadOlderMessages {
+  margin: 0 auto;
+  background-color: rgb(0, 50, 77);
+  color: white;
+  cursor: pointer;
+  border-radius: 50px;
+	border: none;
+	padding: 10px 20px;
+	font-size: 2rem;
  }
  
