--- a/src/components/Landingpage/LandingPage.css
+++ b/src/components/Landingpage/LandingPage.css
@@ -8,6 +8,11 @@
 }
 .container_light{
     background-color: rgb(255, 255, 255);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: left;
+    padding: 10vh;
 }
 .text_side {
     display: flex;
