--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -21,8 +21,27 @@
     box-shadow: 1px 1px 28px 1px rgba(179,179,179,0.36);
     -webkit-box-shadow: 1px 1px 28px 1px rgba(179,179,179,0.36);
     -moz-box-shadow: 1px 1px 28px 1px rgba(179,179,179,0.36);
-    background-color: white;
+    background-color: rgb(0, 0, 0);
 	/* border: 1px solid purple; */
+}
+.container_login_light{
+
+	width: 70vw;
+    height: 70vh;
+    display:flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    grid-gap :5rem;
+    margin-top: 5rem;
+    margin-left: 13rem;
+    margin-bottom: 5rem;
+    /* padding: 0 2rem; */
+    border-radius: 20px;
+    box-shadow: 1px 1px 28px 1px rgba(179,179,179,0.36);
+    -webkit-box-shadow: 1px 1px 28px 1px rgba(179,179,179,0.36);
+    -moz-box-shadow: 1px 1px 28px 1px rgba(179,179,179,0.36);
+    background-color: rgb(255, 255, 255);
 }
 
 .illustration_img img{
