--- a/src/App.css
+++ b/src/App.css
@@ -149,11 +149,10 @@ a {
 }
 
 @media (max-width: 500px) {
-  .navbar {
-    font-size: 2rem;
-  }
+  .navbar,
+  .nav-menu,
   .nav_dark {
-    font-size: 2rem;
+    font-size: large;
   }
 }
 
