--- a/src/components/about-us/Abouts.css
+++ b/src/components/about-us/Abouts.css
@@ -46,7 +46,8 @@
 
 .responsive {
   width: 100%;
-  max-width: 350px;
+  margin-top: 50px;
+  max-width: 400px;
   height: auto;
   overflow: hidden;
   transform: translatey(0px);
