--- a/src/components/contactForm/contactForm.css
+++ b/src/components/contactForm/contactForm.css
@@ -138,7 +138,7 @@
 	line-height:40px;
 	width:25%;
 	border:none;
-	margin-left: 250px;
+    display: flex;
 	justify-content: center;
 	outline:none;
 	cursor:pointer;
@@ -194,7 +194,6 @@
 	line-height:40px;
 	width:40%;
 	border:none;
-	margin-left: 90px;
 	justify-content: center;
 	outline:none;
 	cursor:pointer;
