--- a/src/components/faq/faq.css
+++ b/src/components/faq/faq.css
@@ -6,3 +6,11 @@
     color:rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
 }
+
+#dark {
+    background-color: black; 
+}
+
+#light {
+    background-color: rgb(255, 255, 255);
+}
