--- a/src/components/faq/faq.css
+++ b/src/components/faq/faq.css
@@ -1,8 +1,10 @@
 #faq_dark {
     color:white;
     background-color: black;
+    box-shadow: 1px 0px 8px 0 rgb(253 251 251 / 20%);
 }
 #faq_light {
     color:rgb(0, 0, 0);
     background-color: rgb(255, 255, 255);
+    box-shadow: 1px 0px 8px #000;
 }
