--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -22,6 +22,7 @@
     -webkit-box-shadow: 1px 1px 28px 1px rgba(179,179,179,0.36);
     -moz-box-shadow: 1px 1px 28px 1px rgba(179,179,179,0.36);
     background-color: rgb(0, 0, 0);
+    color:white;
 	/* border: 1px solid purple; */
 }
 .container_login_light{
@@ -76,7 +77,6 @@
 
 .login-content h2{
 	margin: 15px 0;
-	color: #333;
 	text-transform: uppercase;
 	font-size: 2.9rem;
   /* border: 2px solid yellow; */
@@ -180,7 +180,7 @@
 	display: block;
 	text-align: right;
 	text-decoration: none;
-	color: #999;
+	color: #fff;
 	 font-size: 0.9rem; 
 	transition: .3s;
 } 
