--- a/src/components/Landingpage/LandingPage.css
+++ b/src/components/Landingpage/LandingPage.css
@@ -19,10 +19,10 @@
     flex-direction: column;
     margin-left:10vw;
 }
-.image_side {
+.image_sideyy {
     margin-left: 5vw;
 }
-.image_side img {
+.image_sideyy img {
     height: 70vh;
     border-radius: 15px;
     box-shadow: 0px -1px 36px -3px rgba(105,105,105,0.63);
@@ -73,11 +73,11 @@
         justify-content:left;
         padding: 10vh;
     }
-    .image_side {
+    .image_sideyy {
         margin-top: 15vh ;
         margin-left: 1.5vw;
     }
-    .image_side img {
+    .image_sideyy img {
         height: 50vh;
         border-radius: 15px;
        
