--- a/src/App.css
+++ b/src/App.css
@@ -484,22 +484,25 @@ footer {
 
 .loadOlderMessages {
   margin: 0 auto;
-  background-color: rgb(0, 50, 77);
-  color: white;
+  color: #eb2a5d;
   cursor: pointer;
-  border-radius: 50px;
-  border: none;
+  border-radius: 5px;
+  border: 3px solid #eb2a5d;
   padding: 10px 20px;
-  font-size: 2rem;
-  transition: all 0.3s;
+  font-size: 1.75rem;
+  font-weight: bold;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  transition: all 0.5s ease-in-out;
   box-shadow: 0px -1px 5px -3px rgb(106, 101, 145);
-    -webkit-box-shadow: 0px -1px 36px -3px rgb(106, 101, 145);
+  -webkit-box-shadow: 0px -1px 36px -3px rgb(106, 101, 145);
     -moz-box-shadow: 0px -1px 36px -3px rgb(106, 101, 145);
-}
-
-.loadOlderMessages:hover {
-    background-color: rgb(232, 231, 231);
-    color: rgb(0, 50, 77);
+  }
+  
+  .loadOlderMessages:hover {
+    background: linear-gradient( to right, #e6285b, #ee2b5f, #eb2a5d );
+    color: rgb(255, 255, 255);
+    border: 3px solid rgb(255, 255, 255);
+    box-shadow: 0 4px 8px 0 #ee2b5f, 0px -1px 5px -3px #ee2b5f, 0 6px 10px 0 #e6285b;
 }
 
 @media screen and (max-width: 960px) {
