#424 Fix the keyboard toggler button layout in light mode.

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,6 @@ body {
 
 .blackName {
   color: rgb(0, 0, 0);
-  
 }
 
 .speak {
@@ -243,7 +242,7 @@ footer {
 }
 
 .BlackNavBar {
-  background-color: black ;
+  background-color: black;
   border-bottom: 1px solid white;
 }
 
@@ -285,8 +284,10 @@ footer {
   border: 2px solid #d0d0d0;
   width: 60%;
   padding: 2px;
-  border-radius: 8px; 
-  color: white;  margin: 0 auto;  display: flex;
+  border-radius: 8px;
+  color: white;
+  margin: 0 auto;
+  display: flex;
   align-items: center;
   justify-content: center;
 }
@@ -413,8 +414,8 @@ footer {
   align-items: center;
   justify-content: center;
 }
-.KeyboardToggle{
-  margin: 4px;
+.KeyboardToggle {
+  margin: 0 0 0 5px;
 }
 .EmojiPicker {
   position: absolute;
@@ -436,7 +437,6 @@ footer {
   bottom: 70px;
   color: black;
   background-color: transparent;
-
 }
 
 .Speaknow_alert {
@@ -496,13 +496,13 @@ footer {
   font-size: 2rem;
   transition: all 0.3s;
   box-shadow: 0px -1px 5px -3px rgb(106, 101, 145);
-    -webkit-box-shadow: 0px -1px 36px -3px rgb(106, 101, 145);
-    -moz-box-shadow: 0px -1px 36px -3px rgb(106, 101, 145);
+  -webkit-box-shadow: 0px -1px 36px -3px rgb(106, 101, 145);
+  -moz-box-shadow: 0px -1px 36px -3px rgb(106, 101, 145);
 }
 
 .loadOlderMessages:hover {
-    background-color: rgb(232, 231, 231);
-    color: rgb(0, 50, 77);
+  background-color: rgb(232, 231, 231);
+  color: rgb(0, 50, 77);
 }
 
 @media screen and (max-width: 960px) {
