--- a/src/components/forgetpass/forget.css
+++ b/src/components/forgetpass/forget.css
@@ -110,6 +110,18 @@
   color:purple;
 }
 
+.container_forget .btn_forget{
+  background: -webkit-linear-gradient(
+      45deg,
+      rgb(133, 29, 186) 15%,
+      rgba(255, 0, 224, 1) 100%
+    );
+}
+.container_forget .btn_forget:hover{
+	background-position: right;
+  color:rgb(0, 0, 0);
+}
+
   @media screen and (max-width: 998px) {
     form {
       width: 250px;
