increased the font size of messages in mobile view

--- a/src/components/messages/Messages.css
+++ b/src/components/messages/Messages.css
@@ -74,3 +74,12 @@
 .read-or-hide:hover {
   color: rgb(50, 50, 150);
 }
+
+@media (max-width: 500px) {
+  .msgs,
+  .sender,
+  .senderDark,
+  .time-stamp {
+    font-size: medium;
+  }
+}
