made contact-us form responsive

--- a/src/components/contactForm/contactForm.css
+++ b/src/components/contactForm/contactForm.css
@@ -214,4 +214,7 @@ textarea:focus {
     -ms-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
   }
+  .row.clearfix {
+    width: inherit;
+  }
 }
