--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,9 @@ body {
 .speak {
   margin-right: 5px;
 }
-
+.copy {
+  margin-right: -1rem
+}
 /*====================== new navbar ==========================*/
 
 :root {
