--- a/src/components/Landingpage/LandingPage.css
+++ b/src/components/Landingpage/LandingPage.css
@@ -14,6 +14,20 @@
     justify-content: left;
     padding: 10vh;
 }
+@keyframes float {
+    0% {
+      filter: drop-shadow(5px 5px 15px rgba(0,0,0,0.6));
+      transform: translatey(0px);
+    }
+    50% {
+      filter: drop-shadow(5px 5px 15px rgba(0,0,0,0.2));
+      transform: translatey(-20px);
+    }
+    100% {
+      filter: drop-shadow(5px 5px 15px rgba(0,0,0,0.6));
+      transform: translatey(0px);
+    }
+  }
 .text_side1 {
     display: flex;
     flex-direction: column;
@@ -28,6 +42,11 @@
     box-shadow: 0px -1px 36px -3px rgba(105,105,105,0.63);
     -webkit-box-shadow: 0px -1px 36px -3px rgba(105,105,105,0.63);
     -moz-box-shadow: 0px -1px 36px -3px rgba(105,105,105,0.63);
+    overflow: hidden;
+  transform: translatey(0px);
+  -webkit-filter: drop-shadow(5px 5px 15px rgb(29, 28, 28));
+  filter: drop-shadow(5px 5px 15px rgb(34, 33, 33));
+	animation: float 3.38s ease-in-out infinite;
 }
 
 .main_text1 {
