increased the size of buttons and links

--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -341,6 +341,11 @@
     -moz-box-shadow: none;
   }
 
+  .btn_login,
+  .anc {
+    font-size: medium;
+  }
+
   .illustration_img img {
     display: none;
   }
