--- a/src/components/Landingpage/LandingPage.css
+++ b/src/components/Landingpage/LandingPage.css
@@ -49,6 +49,12 @@
 	animation: float 3.38s ease-in-out infinite;
 }
 
+@media screen and (max-width: 600px) {
+  .image_sideyy {
+    display: none;
+  }
+}
+
 .main_text1 {
     display: flex;
     justify-content: flex-start;
@@ -99,7 +105,6 @@
     .image_sideyy img {
         height: 50vh;
         border-radius: 15px;
-       
     }
 
 }
