--- a/src/App.css
+++ b/src/App.css
@@ -30,7 +30,7 @@ body {
   margin-right: 5px;
 }
 .copy {
-  margin-right: -1rem
+  margin-right: -1rem;
 }
 /*====================== new navbar ==========================*/
 
@@ -50,7 +50,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 2rem;
+  font-size: 1.8rem;
   position: sticky;
   top: 0;
   z-index: 20;
@@ -63,7 +63,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 2rem;
+  font-size: 1.8rem;
   position: sticky;
   top: 0;
   z-index: 20;
@@ -496,20 +496,21 @@ footer {
   padding: 10px 20px;
   font-size: 1.75rem;
   font-weight: bold;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   transition: all 0.5s ease-in-out;
   box-shadow: 0px -1px 5px -3px rgb(106, 101, 145);
   -webkit-box-shadow: 0px -1px 36px -3px rgb(106, 101, 145);
 
-    -moz-box-shadow: 0px -1px 36px -3px rgb(106, 101, 145);
-  }
-  
-  .loadOlderMessages:hover {
-    background: linear-gradient( to right, #9240da, #d643f3 );
-    color: rgb(255, 255, 255);
-    border: 3px solid rgb(255, 255, 255);
-    box-shadow: 0 4px 8px 0 #9240da, 0px -1px 5px -3px #d643f3, 0 6px 10px 0 #8735d0;
+  -moz-box-shadow: 0px -1px 36px -3px rgb(106, 101, 145);
+}
 
+.loadOlderMessages:hover {
+  background: linear-gradient(to right, #9240da, #d643f3);
+  color: rgb(255, 255, 255);
+  border: 3px solid rgb(255, 255, 255);
+  box-shadow: 0 4px 8px 0 #9240da, 0px -1px 5px -3px #d643f3,
+    0 6px 10px 0 #8735d0;
 }
 
 @media screen and (max-width: 960px) {
