--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -5,6 +5,16 @@
 	box-sizing: border-box;
 } */
 
+.dark {
+    background-color: black;
+    padding: 30px 0px;
+}
+
+.light {
+    background-color: white;
+    padding: 30px 0px;
+}
+
 .container_signup{
     width: 70vw;
     height: 70vh;
@@ -21,7 +31,7 @@
     box-shadow: 1px 1px 28px 1px rgba(179,179,179,0.36);
     -webkit-box-shadow: 1px 1px 28px 1px rgba(179,179,179,0.36);
     -moz-box-shadow: 1px 1px 28px 1px rgba(179,179,179,0.36);
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(0, 0, 0) !important;
     color:white;
 	/* border: 1px solid purple; */
 }
@@ -42,7 +52,7 @@
     box-shadow: 1px 1px 28px 1px rgba(179,179,179,0.36);
     -webkit-box-shadow: 1px 1px 28px 1px rgba(179,179,179,0.36);
     -moz-box-shadow: 1px 1px 28px 1px rgba(179,179,179,0.36);
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(255, 255, 255) !important;
 }
 
 .illustration_img img{
