--- a/src/components/login/login.css
+++ b/src/components/login/login.css
@@ -22,10 +22,11 @@
     -webkit-box-shadow: 1px 1px 28px 1px rgba(179,179,179,0.36);
     -moz-box-shadow: 1px 1px 28px 1px rgba(179,179,179,0.36);
     background-color: rgb(0, 0, 0);
+    background-color: #000000;
     color:white;
 	/* border: 1px solid purple; */
 }
-.container_login_light{
+.container_loginlight{
 
 	width: 70vw;
     height: 70vh;
