Added Illustration for Forgot Password Page

--- a/src/components/forgetpass/forget.css
+++ b/src/components/forgetpass/forget.css
@@ -49,9 +49,9 @@
 	text-align: center;
 }
 
-.forget_illustration{
+/* .forget_illustration{
     margin-right: 5rem;
-}
+} */
 
 .forget-content .input-div{
 	position: relative;
