added margin 0px

--- a/src/App.css
+++ b/src/App.css
@@ -517,6 +517,7 @@ footer {
 
 @media screen and (max-width: 960px) {
   .nav-menu {
+    margin: 0px;
     display: flex;
     flex-direction: column;
     width: 90%;
@@ -535,7 +536,7 @@ footer {
     justify-content: center;
     align-items: center;
   }
-  .nav-menu.active {
+  .nav-menu:active {
     background: rgb(22, 21, 21);
     left: 0px;
     opacity: 1;
