--- a/src/App.css
+++ b/src/App.css
@@ -519,7 +519,10 @@ footer {
   .nav-menu {
     display: flex;
     flex-direction: column;
-    width: 90%;
+    align-items: center;
+    padding: 0px;
+    width: 100%;
+    height: 100vh;
     border-top: 1pxsolid #fff;
     position: absolute;
     top: 60px;
@@ -572,8 +575,6 @@ footer {
   }
 
   .nav-links {
-    padding: 1.5rem;
-    margin-left: -70px;
     border: none;
   }
 
@@ -593,7 +594,4 @@ footer {
     color: rgb(0, 0, 0);
   }
 
-  .toggle-button {
-    margin-right: 70px !important;
-  }
 }
