--- a/src/components/about-us/Abouts.css
+++ b/src/components/about-us/Abouts.css
@@ -13,15 +13,15 @@
   text-transform: uppercase;
   margin-bottom: 3rem;
   width: 100%;
-}
+} 
 
-.main {
+.about_main {
   padding: 20px 4rem;
   background-color: rgb(0, 0, 0);
 }
 
-.main_light {
-    padding: 20px 4rem;
+.about_main_light {
+    padding: 1em 2em;
     background-color: white;
   }
 
@@ -115,7 +115,7 @@
   #brand {
     margin-top: 40px;
     margin-bottom: -20px;
-    font-size: 5rem;
+    font-size: 2.75rem;
   }
   .main {
     background-color: #131313;
@@ -129,7 +129,7 @@
   .main__content h2 {
     margin-top: 40px;
     padding: 10px !important;
-    font-size: 4rem;
+    font-size: 2.25rem;
   }
 
   .motive-top {
