--- a/src/App.css
+++ b/src/App.css
@@ -310,6 +310,13 @@ footer {
   line-height: 36px;
   transition: all 0.3s cubic-bezier(0.88, 0.19, 0.37, 1.11);
 }
+.copied_status
+{
+  color: red;
+  background-color: cornsilk;
+  position: absolute;
+  bottom: 64px;
+}
 
 .sendNewMessagedark button {
   width: 36px;
