--- a/src/App.css
+++ b/src/App.css
@@ -514,6 +514,32 @@ footer {
   box-shadow: 0 4px 8px 0 #9240da, 0px -1px 5px -3px #d643f3,
     0 6px 10px 0 #8735d0;
 }
+.loadOlderMessages_dark {
+  margin: 0 auto;
+  color: #ffffff;
+  background-color: black;
+  cursor: pointer;
+  border-radius: 5px;
+  border: 1px solid #9240da;
+  padding: 10px 10px;
+  font-size: 1.3rem;
+  font-weight: bold;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  transition: all 0.5s ease-in-out;
+  box-shadow: 0px -1px 5px -3px rgb(106, 101, 145);
+  -webkit-box-shadow: 0px -1px 36px -3px rgb(106, 101, 145);
+
+  -moz-box-shadow: 0px -1px 36px -3px rgb(106, 101, 145);
+}
+
+.loadOlderMessages_dark:hover {
+  background: linear-gradient(to right, #9240da, #d643f3);
+  color: rgb(0, 0, 0);
+  border: 1px solid rgb(255, 255, 255);
+  box-shadow: 0 1px 1px 0 #9240da, 0px -1px 1px -1px #d643f3,
+    0 1px 1px 0 #8735d0;
+}
 
 @media screen and (max-width: 960px) {
   .nav-menu {
